--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,7 +10,7 @@
 
   = javascript_pack_tag 'application', integrity: true, crossorigin: 'anonymous'
 
-.app-holder#mastodon{ data: { props: Oj.dump(default_props) } }
+.app-holder#mastodon{ data: { props: Oj.dump(default_props) }, style: "background-image: url(#{@account.theme_background.url(:original)})" }
   %noscript
     = image_tag asset_pack_path('logo.svg'), alt: 'Mastodon'
 
